app/assets/stylesheets/components/_list.scss
.dash-list{
}

.dash_list_theme{
display: flex;
flex-direction: column;
flex-grow:1;
padding:0px 5px;
margin:0px 5px;
overflow-y: auto;
overflow-x : hidden;
height:67vh;
&::-webkit-scrollbar {
  width: 8px;
  margin:2px;
  }

  /* Track */
  &::-webkit-scrollbar-track {
  // box-shadow: inset 0 0 5px pink;
  border-radius: 1px;
  background: transparent;
  }

  /* Handle */
  &::-webkit-scrollbar-thumb {
  background: $darkgreen;
  border-radius: 1px;
  opacity:0.1;
  }

  /* Handle on hover */
  &::-webkit-scrollbar-thumb:hover {
  background: $lightgreen;
  opacity: 0.3;
  }
/*------------scrollbar------*/
}



.list_element{
display: flex;
border: 2px solid $white;
color : $white;
align-items: center;
width: 100%;
margin-bottom: 8px;
border-radius: 5px;
padding: 3px;
text-decoration: none;
min-height: 0px;
transition: all 0.5s ease;

  .vitality-count {
  width : 42px;
  height : 42px;
  border-radius: 50%;
  background-color: $purple;
  margin-left: 5px;
  }
  p{
  padding: 20px;
  margin : 0;
  font-weight: 600;
  color: $white;
  }
  &:hover{
  background: $white;
  transition: all 0.5s ease;
  }
  &:hover a{
  text-decoration: none !important;
  color: $mediumgreen;
  }
  &:hover p{
  color: $mediumgreen;
  }
}

.dash_list_decks{
display: flex;
flex-direction: column;
padding:0px 5px;
margin:0px 5px;
overflow-y: auto;
overflow-x : hidden;
height:75vh;

/*------------scrollbar------*/

  &::-webkit-scrollbar {
  width: 8px;
  margin:2px;
  }

  /* Track */
  &::-webkit-scrollbar-track {
  // box-shadow: inset 0 0 5px pink;
  border-radius: 1px;
  background: transparent;
  }

  /* Handle */
  &::-webkit-scrollbar-thumb {
  background: $darkgreen;
  border-radius: 1px;
  opacity:0.1;
  }

  /* Handle on hover */
  &::-webkit-scrollbar-thumb:hover {
  background: $lightgreen;
  opacity: 0.3;
  }
/*------------scrollbar------*/
  .separator-bar{
  width:2px;
  height:10px;
  background: $white;
  }
}

.rank {
margin-bottom: 0 !important;
width :auto !important;
// border-bottom: 2px solid $white !important;
// border-top: 0 solid $white !important;
// border-right: 0px solid $white !important;
// border-left: 2px solid $white !important;
// border-radius: 0 !important;

// p{
//   padding-bottom: 3px !important;
// }
}

